# mindustry-svg-renderer

./: .gitignore  README.md  flake.nix  pyproject.toml
mindustry_svg_renderer/: __init__.py  __main__.py
patches/: 0001-fix-IconConverter-using-deprecated-inkscape-verb-opt.patch  0002-fix-disable-anti-aliasing.patch  0003-fix-increase-maximum-icon-size.patch  0004-fix-disable-scaling-icons-and-blocks.patch
scripts/: render
