[tool.poetry]
name = "mindustry-svg-renderer"
version = "0.1.0"
description = ""
authors = ["Joel <joel@joel.tokyo>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.2.0"
pynput = "^1.7.6"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
mindustry-svg-renderer = "mindustry_svg_renderer.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
install_types = true
ignore_missing_imports = true
non_interactive = true
strict = true